# OntoGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
app/: CMakeLists.txt  main.cpp
include/ontograph/: OntoGraph.hpp  RDFParser.hpp
src/: CMakeLists.txt  OntoGraph.cpp  RDFParser.cpp
